--- a/18d/vote18.html
+++ b/18d/vote18.html
@@ -140,7 +140,7 @@
     <section class="election_section c_6 c_m_12">
       <h2>개표 결과</h2>
       <div class="info_text">
-        <img class="img_result c_m_1" src="../img/18d_result.webp">
+        <img class="img_result" src="../img/18d_result.webp">
         <h3>박근혜(새누리당) 당선 (득표율 51.55%)</h3><br>
         <table class="vote_table">
           <caption>주요 지역별 개표 결과</caption>
